<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">篮球社</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- 登录注册模块 -->
    <string name="please_input_your_cellphone">请输入您的手机号码</string>
    <string name="title_input_cellphone">输入手机号码</string>
    <string name="new_user">新用户</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="please_input_your_pwd">请输入您的密码</string>
    <string name="sina_login">新浪登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="register">注册</string>
    <string name="change_user">切换账号</string>
    <string name="title_input_verification_code">输入验证码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="again_get_verification_code">重新获取</string>
    <string name="title_input_pwd">输入16位密码</string>
    <string name="nickname">昵称</string>
    <string name="location">位置</string>
    <string name="sex">性别</string>
    <string name="please_click_input">请点击输入</string>
    <string name="perfect_data">完善资料</string>
    <string name="new_share">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;立即分享到我的微博，\n让自己的朋友也加入自己的球队吧！</string>
    <string name="share">分享</string>
    <string name="me_wran">&#160;&#160;&#160;&#160;&#160;&#160;你还未拥有属于自己的战队，\n现在就去创建或者加入一只球队吧！</string>
    <string name="create_team">组建球队</string>
    <string name="invite_friend">邀请球友</string>
    <string name="exit_team">退出球队</string>
    <string name="title_set">设置</string>
    <string name="exit_login">退出登录</string>
    <!-- 设置界面 -->
    <string-array name="set_item">
        <item>新浪微博</item>
        <item>腾讯微博</item>
        <item>修改密码</item>
        <item>关于我们</item>
        <item>联系客服</item>
        <item>亲，给我们个好评吧！</item>
    </string-array>
    <!-- 附近 -->
    <string name="team">球队</string>
    <string name="ballfriend">球友</string>
    <string name="ballpark">球场</string>
    <string name="title_contacts">通讯</string>
    <string name="title_chat">聊天</string>
    <string name="title_nearby">附近</string>
    <string name="for_the_moment_no_team">暂无球队</string>
    <string name="title_my">我的</string>

    <!-- wt 下拉刷新 -->
    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_header_hint_loading">正在加载中...</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>
    <string name="pushmsg_center_no_more_msg">已经到底啦</string>

    <!-- sp中的提示 -->
    <string name="sp_cellphone_empty">恩...你的手机号码还没有填写!</string>
    <string name="sp_cellphone_bad">恩...你的手机号码好像不对，检查检查吧!</string>
    <string name="sp_pwd_empty">恩...你的密码还没有填写!</string>
    <string name="sp_pwd_bad">恩...你的密码好像不对，检查检查吧!</string>

    <!-- 通讯tab -->
    <string name="txt_notify">通知</string>
    <string name="txt_chat">聊天</string>
    <string name="txt_team">我的队友</string>

</resources>