<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/team_info_rl" >

        <TextView
               android:textSize="@dimen/text_size_nor___"
            android:id="@+id/me_warn_no_team_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/for_the_moment_no_team" />
    </RelativeLayout>

    <include layout="@layout/divider_horizontal" />

    <TextView
           android:textSize="@dimen/text_size_nor_"
        android:id="@+id/me_warn_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/me_wran" />

    <Button
           android:textSize="@dimen/text_size_nor_"
        android:id="@+id/me_create_team_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ui_padding"
        android:layout_marginRight="@dimen/ui_padding"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_bt_hollow_red"
        android:text="@string/create_team"
        android:textColor="@color/red" />

</LinearLayout>